Fix scroll behavior error on Safari.

--- a/2018/assets/css/main.css
+++ b/2018/assets/css/main.css
@@ -59,16 +59,21 @@ table {
   align-items: center;
   grid-area: sidebar; }
   .sidebar .logo {
-    display: flex;
-    justify-content: center;
     width: 100%;
     filter: drop-shadow(0 0 10pt #FFFFFF); }
+    @media screen and (max-width: 1200px) {
+      .sidebar .logo {
+        display: flex;
+        justify-content: center; } }
     .sidebar .logo img {
       width: 100%;
       filter: drop-shadow(0 0 10pt #FFFFFF); }
       @media screen and (max-width: 1200px) {
         .sidebar .logo img {
           width: 50%; } }
+      .sidebar .logo img:before {
+        padding-top: 100%;
+        content: ""; }
   .sidebar .menu {
     margin: 2rem 0;
     display: flex;
